--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,6 +3,19 @@
   padding: 0;
   box-sizing: border-box;
   color: #eeeeee;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 24px;
 }
 
 .container {
